# NuanYue-fastapi

./: .firebaserc  .gitignore  README.md  dev.db  firebase.json  firestore.indexes.json  init_env_base.default  pyproject.toml  requirements-dev.txt  starter.py
app/: __init__.py
app/api/: __init__.py
app/api/cms/: __init__.py  admin.py  merchant.py  users.py
app/api/v1/: __init__.py  book.py  carousel.py  merchant.py  order.py  product.py  spider.py  upload.py  user.py  ws.py
app/cli/db/: __init__.py  add_admin.py  add_category.py  add_lunbotu.py  init.py
app/cli/scripts/: __init__.py  add_fake_users.py  jiami.py
app/config/: __init__.py  config.yaml  development.yaml  settings_manager.py
app/extension/cloud/: __init__.py
app/extension/consumer/: __init__.py  order_consumer.py
app/extension/eventbus/: __init__.py  adapter_mq.py  adapter_redis.py  adapter_ws.py  base.py  service.py
app/extension/google_tools/: __init__.py  firebase_admin_service.py  firestore.py  firestore_transaction_helper.py  fs_transaction.py  rtdb.py  rtdb_message.py
app/extension/i18n/: __init__.py  i18n_exception.py  tencent_tmt.py
app/extension/network/: __init__.py  network.py
app/extension/rabbitmq/: __init__.py  constances.py  consumer_order.py  rabbit.py  service.py
app/extension/redis/: __init__.py  redis_client.py  redis_keyspace_service.py
app/extension/stream/: __init__.py  binance.py
app/extension/websocket/: __init__.py  ws_login_required.py  wss.py
app/h5/: __init__.py  kline.html
app/model/: __init__.py
app/pedro/: __init__.py  config.py  db.py  decorators.py  enums.py  exception.py  id_helper.py  interface.py  loader.py  logger.py  manager.py  model.py  pedro.py  pedro_jwt.py  plugin.py  request_path.py  response.py  response_adapter.py  roles.py  service_manager.py  syslogger.py  utils.py
app/templates/: __init__.py
app/util/: build_email_html.py  crypto.py  generate_id.py  get_lang.py  invite_services.py  jsonb_update.py  merge_extra.py  order_number_generator.py  redis_key_schema.py
cloudflared_tunnel/: __init__.py
functions/: cdnProxy.js  index.js  package.json  uploadImage.js  部署.md
logs/: __init__.py
test/: __init__.py  test.py
(+117 files in other folders)
